{
    "name": "SpawnerControls",
    "maps": [
        {
            "name": "Example",
            "id": "5ac5b6dc-d57c-4779-8ab4-ad9271024ec2",
            "actions": [
                {
                    "name": "SpawnThingOne",
                    "type": "Button",
                    "id": "c0fc4eb4-4a20-4445-8aa7-fa4a3e5161c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SpawnThingTwo",
                    "type": "Button",
                    "id": "cdfbddc5-e94d-4c0e-b4aa-d59dd21e78cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d6e46b69-91b1-4539-a5cc-fa5411fdb2ae",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnThingOne",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9450beac-0f2d-44e9-b1d0-6c87081770df",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnThingTwo",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}